added project invite routes to swagger
