# openapi.yaml
@@ -401,7 +401,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Authorize"
                 
-  /api/invites/send: 
+  /api/invites/send/organization: 
     post:
       summary: Отправить приглашение в организацию
       tags:
@@ -422,9 +422,9 @@ paths:
         '403':
           description: Недостаточно прав
           
-  /api/invites/accept/{token}:
+  /api/invites/accept/organization/{token}:
     get:  
-      summary: Отправить приглашение в организацию
+      summary: Принять приглашение в организацию
       tags:
       - Invites
       operationId: AcceptInvite
@@ -683,6 +683,46 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Forbidden"
+                
+  /api/invites/send/project: 
+    post:
+      summary: Отправить приглашение в проект
+      tags:
+        - Invites
+      operationId: SendInviteProject
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/InviteProject"
+      
+      responses:
+        '200':
+          description: Приглашение отправлено
+        '422':
+          description: Ошибка валидации
+        '403':
+          description: Недостаточно прав
+          
+  /api/invites/accept/project/{token}:
+    get:  
+      summary: Принять приглашение в проект
+      tags:
+      - Invites
+      operationId: AcceptInviteProject
+      parameters:
+        - name: token
+          in: path
+          required: true
+          description: Токен который находится в ссылке для приглашения
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Пользователь вступил в проект
+        '403':
+          description: Недостаточно прав
      
 components: 
   schemas:
@@ -794,7 +834,22 @@ components:
         organizationId:
           type: integer
           example: 4
+    
+    InviteProject:
+      type: object
+      required:
+        - email
+        - projectId
+      
+      properties:
         
+        email:
+          type: string
+          example: invitedUser@example.com
+        projectId:
+          type: integer
+          example: 4
+          
     NotFound:    
       type: object
       
